[package]
name = "gutenberg-analyser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
rayon = "1.5.3"
dashmap = "5.3.4"

[dependencies.reqwest]
version = "0.11.11"
features = ["blocking"]
